--- a/notes.tex
+++ b/notes.tex
@@ -336,9 +336,9 @@ Cyril Cohen, Thierry Coquand, Simon Huber, and Anders M\"ortberg.
 \newblock In \emph{Proc.\ TYPES}, 2018.
 
 \bibitem{angiuli2019cartesian}
-Carlo Angiuli, Thierry Coquand, and Robert Harper.
+Carlo Angiuli, Kuen-Bang Hou, and Robert Harper.
 \newblock Cartesian cubical computational type theory: Constructive reasoning with paths and equalities.
-\newblock \emph{Logical Methods in Computer Science}, 15(3), 2019.
+\newblock n D. R. Ghica, A. Jung (Eds.), Computer Science Logic 2018, CSL 2018 Article 6 (Leibniz International Proceedings in Informatics, LIPIcs; Vol. 119). Schloss Dagstuhl- Leibniz-Zentrum fur Informatik GmbH, Dagstuhl Publishing. https://doi.org/10.4230/LIPIcs.CSL.2018.6
 \end{thebibliography}
 
 \end{document}
